Tab dragging: None snap position if dragged window can't be snapped.

Should consider whether the dragged window can be snapped when trying
to get the snap position on the drag position. Then in multi-tabs drag,
drag one tab out of the source window will not put the source window to
the snapped window's position during drag. Note, browser window may
can't be snapped on different display bounds or scales.

Bug: 905924
Change-Id: I9166092af4252ca44b221da082be1fdb0297f034
Reviewed-on: https://chromium-review.googlesource.com/c/1345425
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610987}
Former-commit-id: 104b5d40974be1355bcbf1a495afbfd3d6da0a73