ash/wm/tablet_mode/tablet_mode_window_drag_delegate.cc
@@ -271,6 +271,9 @@ int TabletModeWindowDragDelegate::GetIndicatorsVerticalThreshold(
 
 SplitViewController::SnapPosition TabletModeWindowDragDelegate::GetSnapPosition(
     const gfx::Point& location_in_screen) const {
+  if (!split_view_controller_->CanSnap(dragged_window_))
+    return SplitViewController::NONE;
+
   // If split view mode is active during dragging, the dragged window will be
   // either snapped left or right (if it's not merged into overview window),
   // depending on the relative position of |location_in_screen| and the current
